parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stmts
Rule 1     stmts -> stmts stmt
Rule 2     stmts -> empty
Rule 3     stmt -> assignment
Rule 4     stmt -> for
Rule 5     stmt -> if
Rule 6     stmt -> while
Rule 7     stmt -> expression
Rule 8     if -> IF expression COLON LBRACE stmts RBRACE elif
Rule 9     elif -> ELIF expression COLON LBRACE stmts RBRACE elif
Rule 10    elif -> else
Rule 11    else -> ELSE COLON LBRACE stmts RBRACE
Rule 12    else -> empty
Rule 13    while -> WHILE expression COLON LBRACE stmts RBRACE
Rule 14    for -> FOR ID IN RANGE LPAREN NUMBER RPAREN COLON LBRACE stmts RBRACE
Rule 15    assignment -> ID ASSIGN expression
Rule 16    expression -> expression PLUS term
Rule 17    expression -> expression MINUS term
Rule 18    expression -> expression GE term
Rule 19    expression -> expression EQ term
Rule 20    expression -> expression NE term
Rule 21    expression -> expression LT term
Rule 22    expression -> expression LE term
Rule 23    expression -> expression GT term
Rule 24    expression -> term
Rule 25    term -> term TIMES factor
Rule 26    term -> term DIVIDE factor
Rule 27    term -> factor
Rule 28    factor -> NUMBER
Rule 29    factor -> ID
Rule 30    factor -> LPAREN expression RPAREN
Rule 31    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 15
COLON                : 8 9 11 13 14
DIVIDE               : 26
ELIF                 : 9
ELSE                 : 11
EQ                   : 19
FOR                  : 14
GE                   : 18
GT                   : 23
ID                   : 14 15 29
IF                   : 8
IN                   : 14
LBRACE               : 8 9 11 13 14
LE                   : 22
LPAREN               : 14 30
LT                   : 21
MINUS                : 17
NE                   : 20
NUMBER               : 14 28
PLUS                 : 16
RANGE                : 14
RBRACE               : 8 9 11 13 14
RPAREN               : 14 30
TIMES                : 25
WHILE                : 13
error                : 

Nonterminals, with rules where they appear

assignment           : 3
elif                 : 8 9
else                 : 10
empty                : 2 12
expression           : 7 8 9 13 15 16 17 18 19 20 21 22 23 30
factor               : 25 26 27
for                  : 4
if                   : 5
stmt                 : 1
stmts                : 1 8 9 11 13 14 0
term                 : 16 17 18 19 20 21 22 23 24 25 26
while                : 6

Parsing method: LALR

state 0

    (0) S' -> . stmts
    (1) stmts -> . stmts stmt
    (2) stmts -> . empty
    (31) empty -> .

    ID              reduce using rule 31 (empty -> .)
    FOR             reduce using rule 31 (empty -> .)
    IF              reduce using rule 31 (empty -> .)
    WHILE           reduce using rule 31 (empty -> .)
    NUMBER          reduce using rule 31 (empty -> .)
    LPAREN          reduce using rule 31 (empty -> .)
    $end            reduce using rule 31 (empty -> .)

    stmts                          shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> stmts .
    (1) stmts -> stmts . stmt
    (3) stmt -> . assignment
    (4) stmt -> . for
    (5) stmt -> . if
    (6) stmt -> . while
    (7) stmt -> . expression
    (15) assignment -> . ID ASSIGN expression
    (14) for -> . FOR ID IN RANGE LPAREN NUMBER RPAREN COLON LBRACE stmts RBRACE
    (8) if -> . IF expression COLON LBRACE stmts RBRACE elif
    (13) while -> . WHILE expression COLON LBRACE stmts RBRACE
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . expression GE term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 11

    stmt                           shift and go to state 3
    assignment                     shift and go to state 4
    for                            shift and go to state 5
    if                             shift and go to state 6
    while                          shift and go to state 7
    expression                     shift and go to state 8
    term                           shift and go to state 15
    factor                         shift and go to state 16

state 2

    (2) stmts -> empty .

    ID              reduce using rule 2 (stmts -> empty .)
    FOR             reduce using rule 2 (stmts -> empty .)
    IF              reduce using rule 2 (stmts -> empty .)
    WHILE           reduce using rule 2 (stmts -> empty .)
    NUMBER          reduce using rule 2 (stmts -> empty .)
    LPAREN          reduce using rule 2 (stmts -> empty .)
    $end            reduce using rule 2 (stmts -> empty .)
    RBRACE          reduce using rule 2 (stmts -> empty .)


state 3

    (1) stmts -> stmts stmt .

    ID              reduce using rule 1 (stmts -> stmts stmt .)
    FOR             reduce using rule 1 (stmts -> stmts stmt .)
    IF              reduce using rule 1 (stmts -> stmts stmt .)
    WHILE           reduce using rule 1 (stmts -> stmts stmt .)
    NUMBER          reduce using rule 1 (stmts -> stmts stmt .)
    LPAREN          reduce using rule 1 (stmts -> stmts stmt .)
    $end            reduce using rule 1 (stmts -> stmts stmt .)
    RBRACE          reduce using rule 1 (stmts -> stmts stmt .)


state 4

    (3) stmt -> assignment .

    ID              reduce using rule 3 (stmt -> assignment .)
    FOR             reduce using rule 3 (stmt -> assignment .)
    IF              reduce using rule 3 (stmt -> assignment .)
    WHILE           reduce using rule 3 (stmt -> assignment .)
    NUMBER          reduce using rule 3 (stmt -> assignment .)
    LPAREN          reduce using rule 3 (stmt -> assignment .)
    $end            reduce using rule 3 (stmt -> assignment .)
    RBRACE          reduce using rule 3 (stmt -> assignment .)


state 5

    (4) stmt -> for .

    ID              reduce using rule 4 (stmt -> for .)
    FOR             reduce using rule 4 (stmt -> for .)
    IF              reduce using rule 4 (stmt -> for .)
    WHILE           reduce using rule 4 (stmt -> for .)
    NUMBER          reduce using rule 4 (stmt -> for .)
    LPAREN          reduce using rule 4 (stmt -> for .)
    $end            reduce using rule 4 (stmt -> for .)
    RBRACE          reduce using rule 4 (stmt -> for .)


state 6

    (5) stmt -> if .

    ID              reduce using rule 5 (stmt -> if .)
    FOR             reduce using rule 5 (stmt -> if .)
    IF              reduce using rule 5 (stmt -> if .)
    WHILE           reduce using rule 5 (stmt -> if .)
    NUMBER          reduce using rule 5 (stmt -> if .)
    LPAREN          reduce using rule 5 (stmt -> if .)
    $end            reduce using rule 5 (stmt -> if .)
    RBRACE          reduce using rule 5 (stmt -> if .)


state 7

    (6) stmt -> while .

    ID              reduce using rule 6 (stmt -> while .)
    FOR             reduce using rule 6 (stmt -> while .)
    IF              reduce using rule 6 (stmt -> while .)
    WHILE           reduce using rule 6 (stmt -> while .)
    NUMBER          reduce using rule 6 (stmt -> while .)
    LPAREN          reduce using rule 6 (stmt -> while .)
    $end            reduce using rule 6 (stmt -> while .)
    RBRACE          reduce using rule 6 (stmt -> while .)


state 8

    (7) stmt -> expression .
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term
    (18) expression -> expression . GE term
    (19) expression -> expression . EQ term
    (20) expression -> expression . NE term
    (21) expression -> expression . LT term
    (22) expression -> expression . LE term
    (23) expression -> expression . GT term

    ID              reduce using rule 7 (stmt -> expression .)
    FOR             reduce using rule 7 (stmt -> expression .)
    IF              reduce using rule 7 (stmt -> expression .)
    WHILE           reduce using rule 7 (stmt -> expression .)
    NUMBER          reduce using rule 7 (stmt -> expression .)
    LPAREN          reduce using rule 7 (stmt -> expression .)
    $end            reduce using rule 7 (stmt -> expression .)
    RBRACE          reduce using rule 7 (stmt -> expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    GE              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21
    LT              shift and go to state 22
    LE              shift and go to state 23
    GT              shift and go to state 24


state 9

    (15) assignment -> ID . ASSIGN expression
    (29) factor -> ID .

    ASSIGN          shift and go to state 25
    TIMES           reduce using rule 29 (factor -> ID .)
    DIVIDE          reduce using rule 29 (factor -> ID .)
    PLUS            reduce using rule 29 (factor -> ID .)
    MINUS           reduce using rule 29 (factor -> ID .)
    GE              reduce using rule 29 (factor -> ID .)
    EQ              reduce using rule 29 (factor -> ID .)
    NE              reduce using rule 29 (factor -> ID .)
    LT              reduce using rule 29 (factor -> ID .)
    LE              reduce using rule 29 (factor -> ID .)
    GT              reduce using rule 29 (factor -> ID .)
    ID              reduce using rule 29 (factor -> ID .)
    FOR             reduce using rule 29 (factor -> ID .)
    IF              reduce using rule 29 (factor -> ID .)
    WHILE           reduce using rule 29 (factor -> ID .)
    NUMBER          reduce using rule 29 (factor -> ID .)
    LPAREN          reduce using rule 29 (factor -> ID .)
    $end            reduce using rule 29 (factor -> ID .)
    RBRACE          reduce using rule 29 (factor -> ID .)


state 10

    (14) for -> FOR . ID IN RANGE LPAREN NUMBER RPAREN COLON LBRACE stmts RBRACE

    ID              shift and go to state 26


state 11

    (30) factor -> LPAREN . expression RPAREN
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . expression GE term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    expression                     shift and go to state 27
    term                           shift and go to state 15
    factor                         shift and go to state 16

state 12

    (28) factor -> NUMBER .

    TIMES           reduce using rule 28 (factor -> NUMBER .)
    DIVIDE          reduce using rule 28 (factor -> NUMBER .)
    PLUS            reduce using rule 28 (factor -> NUMBER .)
    MINUS           reduce using rule 28 (factor -> NUMBER .)
    GE              reduce using rule 28 (factor -> NUMBER .)
    EQ              reduce using rule 28 (factor -> NUMBER .)
    NE              reduce using rule 28 (factor -> NUMBER .)
    LT              reduce using rule 28 (factor -> NUMBER .)
    LE              reduce using rule 28 (factor -> NUMBER .)
    GT              reduce using rule 28 (factor -> NUMBER .)
    ID              reduce using rule 28 (factor -> NUMBER .)
    FOR             reduce using rule 28 (factor -> NUMBER .)
    IF              reduce using rule 28 (factor -> NUMBER .)
    WHILE           reduce using rule 28 (factor -> NUMBER .)
    NUMBER          reduce using rule 28 (factor -> NUMBER .)
    LPAREN          reduce using rule 28 (factor -> NUMBER .)
    $end            reduce using rule 28 (factor -> NUMBER .)
    RPAREN          reduce using rule 28 (factor -> NUMBER .)
    COLON           reduce using rule 28 (factor -> NUMBER .)
    RBRACE          reduce using rule 28 (factor -> NUMBER .)


state 13

    (8) if -> IF . expression COLON LBRACE stmts RBRACE elif
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . expression GE term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    expression                     shift and go to state 29
    term                           shift and go to state 15
    factor                         shift and go to state 16

state 14

    (13) while -> WHILE . expression COLON LBRACE stmts RBRACE
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . expression GE term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    expression                     shift and go to state 30
    term                           shift and go to state 15
    factor                         shift and go to state 16

state 15

    (24) expression -> term .
    (25) term -> term . TIMES factor
    (26) term -> term . DIVIDE factor

    PLUS            reduce using rule 24 (expression -> term .)
    MINUS           reduce using rule 24 (expression -> term .)
    GE              reduce using rule 24 (expression -> term .)
    EQ              reduce using rule 24 (expression -> term .)
    NE              reduce using rule 24 (expression -> term .)
    LT              reduce using rule 24 (expression -> term .)
    LE              reduce using rule 24 (expression -> term .)
    GT              reduce using rule 24 (expression -> term .)
    ID              reduce using rule 24 (expression -> term .)
    FOR             reduce using rule 24 (expression -> term .)
    IF              reduce using rule 24 (expression -> term .)
    WHILE           reduce using rule 24 (expression -> term .)
    NUMBER          reduce using rule 24 (expression -> term .)
    LPAREN          reduce using rule 24 (expression -> term .)
    $end            reduce using rule 24 (expression -> term .)
    RPAREN          reduce using rule 24 (expression -> term .)
    COLON           reduce using rule 24 (expression -> term .)
    RBRACE          reduce using rule 24 (expression -> term .)
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32


state 16

    (27) term -> factor .

    TIMES           reduce using rule 27 (term -> factor .)
    DIVIDE          reduce using rule 27 (term -> factor .)
    PLUS            reduce using rule 27 (term -> factor .)
    MINUS           reduce using rule 27 (term -> factor .)
    GE              reduce using rule 27 (term -> factor .)
    EQ              reduce using rule 27 (term -> factor .)
    NE              reduce using rule 27 (term -> factor .)
    LT              reduce using rule 27 (term -> factor .)
    LE              reduce using rule 27 (term -> factor .)
    GT              reduce using rule 27 (term -> factor .)
    ID              reduce using rule 27 (term -> factor .)
    FOR             reduce using rule 27 (term -> factor .)
    IF              reduce using rule 27 (term -> factor .)
    WHILE           reduce using rule 27 (term -> factor .)
    NUMBER          reduce using rule 27 (term -> factor .)
    LPAREN          reduce using rule 27 (term -> factor .)
    $end            reduce using rule 27 (term -> factor .)
    RPAREN          reduce using rule 27 (term -> factor .)
    COLON           reduce using rule 27 (term -> factor .)
    RBRACE          reduce using rule 27 (term -> factor .)


state 17

    (16) expression -> expression PLUS . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    term                           shift and go to state 33
    factor                         shift and go to state 16

state 18

    (17) expression -> expression MINUS . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    term                           shift and go to state 34
    factor                         shift and go to state 16

state 19

    (18) expression -> expression GE . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    term                           shift and go to state 35
    factor                         shift and go to state 16

state 20

    (19) expression -> expression EQ . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    term                           shift and go to state 36
    factor                         shift and go to state 16

state 21

    (20) expression -> expression NE . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    term                           shift and go to state 37
    factor                         shift and go to state 16

state 22

    (21) expression -> expression LT . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    term                           shift and go to state 38
    factor                         shift and go to state 16

state 23

    (22) expression -> expression LE . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    term                           shift and go to state 39
    factor                         shift and go to state 16

state 24

    (23) expression -> expression GT . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    term                           shift and go to state 40
    factor                         shift and go to state 16

state 25

    (15) assignment -> ID ASSIGN . expression
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . expression GE term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . term
    (25) term -> . term TIMES factor
    (26) term -> . term DIVIDE factor
    (27) term -> . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    expression                     shift and go to state 41
    term                           shift and go to state 15
    factor                         shift and go to state 16

state 26

    (14) for -> FOR ID . IN RANGE LPAREN NUMBER RPAREN COLON LBRACE stmts RBRACE

    IN              shift and go to state 42


state 27

    (30) factor -> LPAREN expression . RPAREN
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term
    (18) expression -> expression . GE term
    (19) expression -> expression . EQ term
    (20) expression -> expression . NE term
    (21) expression -> expression . LT term
    (22) expression -> expression . LE term
    (23) expression -> expression . GT term

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    GE              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21
    LT              shift and go to state 22
    LE              shift and go to state 23
    GT              shift and go to state 24


state 28

    (29) factor -> ID .

    TIMES           reduce using rule 29 (factor -> ID .)
    DIVIDE          reduce using rule 29 (factor -> ID .)
    RPAREN          reduce using rule 29 (factor -> ID .)
    PLUS            reduce using rule 29 (factor -> ID .)
    MINUS           reduce using rule 29 (factor -> ID .)
    GE              reduce using rule 29 (factor -> ID .)
    EQ              reduce using rule 29 (factor -> ID .)
    NE              reduce using rule 29 (factor -> ID .)
    LT              reduce using rule 29 (factor -> ID .)
    LE              reduce using rule 29 (factor -> ID .)
    GT              reduce using rule 29 (factor -> ID .)
    COLON           reduce using rule 29 (factor -> ID .)
    ID              reduce using rule 29 (factor -> ID .)
    FOR             reduce using rule 29 (factor -> ID .)
    IF              reduce using rule 29 (factor -> ID .)
    WHILE           reduce using rule 29 (factor -> ID .)
    NUMBER          reduce using rule 29 (factor -> ID .)
    LPAREN          reduce using rule 29 (factor -> ID .)
    $end            reduce using rule 29 (factor -> ID .)
    RBRACE          reduce using rule 29 (factor -> ID .)


state 29

    (8) if -> IF expression . COLON LBRACE stmts RBRACE elif
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term
    (18) expression -> expression . GE term
    (19) expression -> expression . EQ term
    (20) expression -> expression . NE term
    (21) expression -> expression . LT term
    (22) expression -> expression . LE term
    (23) expression -> expression . GT term

    COLON           shift and go to state 44
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    GE              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21
    LT              shift and go to state 22
    LE              shift and go to state 23
    GT              shift and go to state 24


state 30

    (13) while -> WHILE expression . COLON LBRACE stmts RBRACE
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term
    (18) expression -> expression . GE term
    (19) expression -> expression . EQ term
    (20) expression -> expression . NE term
    (21) expression -> expression . LT term
    (22) expression -> expression . LE term
    (23) expression -> expression . GT term

    COLON           shift and go to state 45
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    GE              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21
    LT              shift and go to state 22
    LE              shift and go to state 23
    GT              shift and go to state 24


state 31

    (25) term -> term TIMES . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    factor                         shift and go to state 46

state 32

    (26) term -> term DIVIDE . factor
    (28) factor -> . NUMBER
    (29) factor -> . ID
    (30) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 12
    ID              shift and go to state 28
    LPAREN          shift and go to state 11

    factor                         shift and go to state 47

state 33

    (16) expression -> expression PLUS term .
    (25) term -> term . TIMES factor
    (26) term -> term . DIVIDE factor

    PLUS            reduce using rule 16 (expression -> expression PLUS term .)
    MINUS           reduce using rule 16 (expression -> expression PLUS term .)
    GE              reduce using rule 16 (expression -> expression PLUS term .)
    EQ              reduce using rule 16 (expression -> expression PLUS term .)
    NE              reduce using rule 16 (expression -> expression PLUS term .)
    LT              reduce using rule 16 (expression -> expression PLUS term .)
    LE              reduce using rule 16 (expression -> expression PLUS term .)
    GT              reduce using rule 16 (expression -> expression PLUS term .)
    ID              reduce using rule 16 (expression -> expression PLUS term .)
    FOR             reduce using rule 16 (expression -> expression PLUS term .)
    IF              reduce using rule 16 (expression -> expression PLUS term .)
    WHILE           reduce using rule 16 (expression -> expression PLUS term .)
    NUMBER          reduce using rule 16 (expression -> expression PLUS term .)
    LPAREN          reduce using rule 16 (expression -> expression PLUS term .)
    $end            reduce using rule 16 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 16 (expression -> expression PLUS term .)
    COLON           reduce using rule 16 (expression -> expression PLUS term .)
    RBRACE          reduce using rule 16 (expression -> expression PLUS term .)
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32


state 34

    (17) expression -> expression MINUS term .
    (25) term -> term . TIMES factor
    (26) term -> term . DIVIDE factor
